--- a/index.html
+++ b/index.html
@@ -8,99 +8,64 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background-color: #121212;
-      color: #fff;
+      background-color: #f4f4f4;
+      color: #333;
     }
     header {
-      background-color: #1f1f1f;
-      padding: 20px;
       text-align: center;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 2rem;
-    }
-    .tagline {
-      font-size: 1rem;
-      color: #aaa;
-    }
-    .content {
       padding: 20px;
-      max-width: 800px;
+      background: white;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+    header img {
+      max-width: 200px;
+    }
+    .section {
+      padding: 20px;
+      max-width: 900px;
       margin: auto;
+    }
+    h2 {
       text-align: center;
-    }
-    .price-box {
-      background-color: #222;
-      padding: 20px;
-      border-radius: 10px;
-      margin: 30px 0;
-    }
-    .price-box h2 {
-      margin-bottom: 10px;
-    }
-    .qr-box {
-      margin-top: 20px;
-    }
-    .qr-box img {
-      width: 250px;
-      border: 4px solid #fff;
-      border-radius: 10px;
-    }
-    .note {
-      font-size: 0.9rem;
-      color: #ccc;
-      margin-top: 15px;
-    }
-    .contact-box {
       margin-top: 40px;
-      background: #1a1a1a;
-      padding: 20px;
-      border-radius: 10px;
     }
-    .contact-box p {
-      margin: 10px 0;
-      font-size: 0.95rem;
+    .proofs {
+      display: flex;
+      justify-content: center;
+      gap: 15px;
+      flex-wrap: wrap;
     }
-    footer {
-      text-align: center;
-      padding: 20px;
-      font-size: 0.8rem;
-      color: #888;
+    .proofs img {
+      width: 250px;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: transform 0.2s;
+    }
+    .proofs img:hover {
+      transform: scale(1.05);
     }
   </style>
 </head>
 <body>
+
   <header>
-    <h1>MovieKitPlats</h1>
-    <p class="tagline">Exclusive Short Video Packs for Creators 🚀</p>
+    <!-- Your logo -->
+    <img src="YOUR_LOGO_IMAGE_LINK" alt="MovieKitPlats Logo">
   </header>
-  <div class="content">
-    <h2>Get Ready-to-Use Viral Videos for Just ₹99</h2>
-    <p>Use them on YouTube, Instagram, Reels, and grow your journey as a content creator!</p>
 
-    <div class="price-box">
-      <h2>Step 1: Make Payment (₹99 Only)</h2>
-      <p>Scan the QR Code below or use the UPI ID.</p>
-      <div class="qr-box">
-        <img src="https://chat.openai.com/cdn-cgi/imagedelivery/_images/32b06a74-e4cb-438e-9fdc-1f51ed245032/public" alt="QR Code to Pay" />
-        <p class="note">UPI ID: <strong>sant7088@oksbi</strong></p>
-      </div>
-      <p class="note">⚠️ Make sure to take a screenshot after payment.</p>
-    </div>
+  <div class="section">
+    <h1 style="text-align:center;">MovieKitPlats - Viral Video Packs</h1>
+    <p style="text-align:center;">Get ready-to-use viral movie clips to boost your social media presence.</p>
+  </div>
 
-    <div class="contact-box">
-      <h2>Step 2: DM or Email for Package</h2>
-      <p>After payment, send your payment screenshot via:</p>
-      <p>📩 Email: <strong>Igshivamcashpages8787@gmail.com</strong></p>
-      <p>📱 Instagram DM: <strong>@platsfcshivam</strong></p>
-      <p>✅ Once verified, you'll receive your video pack directly.</p>
+  <div class="section">
+    <h2>Preview of my webpage</h2>
+    <div class="proofs">
+      <a href="YOUR_PROOF_IMAGE1_LINK" target="_blank"><img src="YOUR_PROOF_IMAGE1_LINK" alt="Proof 1"></a>
+      <a href="YOUR_PROOF_IMAGE2_LINK" target="_blank"><img src="YOUR_PROOF_IMAGE2_LINK" alt="Proof 2"></a>
+      <a href="YOUR_PROOF_IMAGE3_LINK" target="_blank"><img src="YOUR_PROOF_IMAGE3_LINK" alt="Proof 3"></a>
     </div>
   </div>
 
-  <footer>
-    &copy; 2025 MovieKitPlats. All rights reserved.
-  </footer>
 </body>
-
 </html>
